# NyRAG

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  compose.yml  env.example  pyproject.toml
.github/workflows/: quality.yml
configs/: example.yml
src/nyrag/: __init__.py  api.py  cli.py  config.py  defaults.py  deploy.py  feed.py  process.py  utils.py  vespa_cli.py  vespa_docker.py
src/nyrag/crawly/: crawly.py
src/nyrag/static/: chat.css  chat.js
src/nyrag/templates/: chat.html
